# BlueSyncstudent

./: README.md
.github/workflows/: build.yml
BS Logos/: 1024_1024 icon.ai  512_512.ai  logo.ai  splash screen.ai
BS Logos/FIles/: BlueSync for educators.ai  BlueSync.ai  Bluesync for admins.ai  Bluesync for students.ai
nexus-class-sync-main/: .gitignore  CROSS_PLATFORM_GUIDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
nexus-class-sync-main/scripts/: collect-release.mjs  generate-tauri-icons.mjs
nexus-class-sync-main/src/: App.tsx  index.css
nexus-class-sync-main/src-tauri/: 2  Cargo.toml  Info.plist  tauri.conf.json
nexus-class-sync-main/src-tauri/capabilities/: default.json
nexus-class-sync-main/src-tauri/icons/: README.md  icon.icns
nexus-class-sync-main/src-tauri/src/: lib.rs  macos_audio.rs  macos_bluetooth.rs  main.rs
nexus-class-sync-main/src/contexts/: AudioContext.tsx
nexus-class-sync-main/src/hooks/: useBroadcastAudio.ts  useBroadcastDevices.ts  useBroadcastPresence.ts  useStudentAttentionListener.ts  useTeacherBroadcast.ts
nexus-class-sync-main/src/lib/: appVersion.ts
nexus-class-sync-main/src/pages/: ClassDetails.tsx  Dashboard.tsx  Login.tsx  ManageClasses.tsx  Settings.tsx
nexus-class-sync-main/supabase/: config.toml
nexus-class-sync-main/supabase/migrations/: 20250811145758_3ff1e74e-cade-438e-90c9-cd5afcf18f06.sql  20250811150303_58b713fe-8c77-469e-a0db-737a2d18fc16.sql  20250811223326_571e85e8-bee0-4024-98f1-6e19a2b21738.sql  20260126120000_student_join_class_fix.sql  (+27 more)
(+7 files in other folders)
